force-app/main/default/objects/Product2/fields/Accountant_Process__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Process__c</fullName>
    <description>Accountant Process</description>
    <inlineHelpText>Accountant Process</inlineHelpText>
    <label>Accountant Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tax Advisory</fullName>
            </value>
            <value>
                <fullName>Tax Prep</fullName>
            </value>
            <value>
                <fullName>Sales and Use Tax</fullName>
            </value>
            <value>
                <fullName>Notice</fullName>
            </value>
            <value>
                <fullName>Additional State Tax Filing</fullName>
            </value>
            <value>
                <fullName>1099 Prep</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Estimated Taxes</fullName>
            </value>
            <value>
                <fullName>EIDL</fullName>
            </value>
            <value>
                <fullName>PPP</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Back Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Entity Formation</fullName>
            </value>
            <value>
                <fullName>Vendasta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>