force-app/main/default/objects/Product2/fields/Add_Special_Message__c.field-meta.xml
<CustomField>
    <fullName>Add_Special_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Adds the message saved in the Org Defaults custom setting to the Payment invoice</description>
    <inlineHelpText>Adds the message saved in the Org Defaults custom setting to the Payment invoice</inlineHelpText>
    <label>Add Special Message</label>
    <type>Checkbox</type>
</CustomField>