force-app/main/default/objects/Product2/fields/AnnualMonthlyOption__c.field-meta.xml
<CustomField>
    <fullName>AnnualMonthlyOption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AnnualMonthlyOption</label>
    <type>Checkbox</type>
</CustomField>