force-app/main/default/objects/Product2/fields/Appointment_Required__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Required__c</fullName>
    <label>Appointment Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>