force-app/main/default/objects/Product2/fields/B62_Price_Status__c.field-meta.xml
<CustomField>
    <fullName>B62_Price_Status__c</fullName>
    <label>B62 Price Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Needs Validation</fullName>
            </value>
            <value>
                <fullName>QA - Issues Found</fullName>
            </value>
            <value>
                <fullName>QA - Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>