force-app/main/default/objects/Product2/fields/Bill62__Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Auto_Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Renew</label>
    <type>Checkbox</type>
</CustomField>