force-app/main/default/objects/Product2/fields/Bill62__Category__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Solutions</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Wellness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>