force-app/main/default/objects/Product2/fields/Bill62__Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Gateway</label>
    <referenceTo>Bill62__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>