force-app/main/default/objects/Product2/fields/Bill62__Product_Discount__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Product_Discount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes that this Discount will be applied to all Subscriptions created for this Product</description>
    <inlineHelpText>Denotes that this Discount will be applied to all Subscriptions created for this Product</inlineHelpText>
    <label>Product Discount</label>
    <referenceTo>Bill62__Discount__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>