force-app/main/default/objects/Product2/fields/Bill62__Related_Discount__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Related_Discount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup utilized by the API getDiscount call to return Products associated with a Discount.</description>
    <label>Related Discount</label>
    <referenceTo>Bill62__Discount__c</referenceTo>
    <relationshipLabel>Products (Related Discount)</relationshipLabel>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>