force-app/main/default/objects/Product2/fields/Billing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Notes__c</fullName>
    <label>Billing Notes</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>