force-app/main/default/objects/Product2/fields/Billing_Schedule_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule_Notes__c</fullName>
    <label>Billing Schedule Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>