force-app/main/default/objects/Product2/fields/BTP_Essential_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>BTP_Essential_Product_Description__c</fullName>
    <description>Essential Product Description for BTP clients inside Business Tax Information</description>
    <label>BTP Essential Product Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>