force-app/main/default/objects/Product2/fields/BTP_Product_Button_Title__c.field-meta.xml
<CustomField>
    <fullName>BTP_Product_Button_Title__c</fullName>
    <description>Product Button Title for BTP clients inside Business Tax Information</description>
    <label>BTP Product Button Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>