force-app/main/default/objects/Product2/fields/BTP_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>BTP_Product_Description__c</fullName>
    <description>Product Description for BTP clients inside Business Tax Information</description>
    <label>BTP Product Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>