force-app/main/default/objects/Product2/fields/BTP_Product_Title__c.field-meta.xml
<CustomField>
    <fullName>BTP_Product_Title__c</fullName>
    <description>Product Title for BTP clients inside Business Tax Information</description>
    <label>BTP Product Title</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>