force-app/main/default/objects/Product2/fields/Bundles__c.field-meta.xml
<CustomField>
    <fullName>Bundles__c</fullName>
    <label>Bundles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic Accounting</fullName>
            </value>
            <value>
                <fullName>BTP Basic Accounting</fullName>
            </value>
            <value>
                <fullName>BTP Pro Accounting</fullName>
            </value>
            <value>
                <fullName>Dissolution &amp; Final Return</fullName>
            </value>
            <value>
                <fullName>Non-Profit Tax Prep &amp; Tax Advisory</fullName>
            </value>
            <value>
                <fullName>Personal Basic Accounting</fullName>
            </value>
            <value>
                <fullName>Pro Accounting</fullName>
            </value>
            <value>
                <fullName>Sprout Growth</fullName>
            </value>
            <value>
                <fullName>Sprout Advantage</fullName>
            </value>
            <value>
                <fullName>Sprout Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>