force-app/main/default/objects/Product2/fields/Calculator_Location__c.field-meta.xml
<CustomField>
    <fullName>Calculator_Location__c</fullName>
    <description>Used to indicate if the product should be included in the pricing calculator. Field values indicate what type of product it&apos;s connected with for dynamic pricing purposes.</description>
    <label>Calculator Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>A La Carte</fullName>
            </value>
            <value>
                <fullName>Back Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Back Business Return</fullName>
            </value>
            <value>
                <fullName>Back Personal Return</fullName>
            </value>
            <value>
                <fullName>Back Quarterly Payroll</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Business Return</fullName>
            </value>
            <value>
                <fullName>Corp State Filing</fullName>
            </value>
            <value>
                <fullName>Foreign State</fullName>
            </value>
            <value>
                <fullName>LLC State Filing</fullName>
            </value>
            <value>
                <fullName>Non-Profit Back Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Non-Profit Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Personal Return</fullName>
            </value>
            <value>
                <fullName>State Filing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>