force-app/main/default/objects/Product2/fields/Card_Group_Option__c.field-meta.xml
<CustomField>
    <fullName>Card_Group_Option__c</fullName>
    <description>This field is used for 1800Accountant website as option to be displayed inside card</description>
    <label>Card Group Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tax Year 2019</fullName>
            </value>
            <value>
                <fullName>Tax Year 2018</fullName>
            </value>
            <value>
                <fullName>Tax Year 2017</fullName>
            </value>
            <value>
                <fullName>Tax Year 2016</fullName>
            </value>
            <value>
                <fullName>Tax Year 2015</fullName>
            </value>
            <value>
                <fullName>Tax Year 2014</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>