force-app/main/default/objects/Product2/fields/Card_Group_Title__c.field-meta.xml
<CustomField>
    <fullName>Card_Group_Title__c</fullName>
    <description>This field is used to group Products on 1800Accountant website in one card</description>
    <label>Card Group Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Tax Preparation</fullName>
            </value>
            <value>
                <fullName>Business Tax Preparation</fullName>
            </value>
            <value>
                <fullName>Business and Personal Tax Preparation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>