force-app/main/default/objects/Product2/fields/ChargeOver__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ChargeOver</label>
    <type>Checkbox</type>
</CustomField>