force-app/main/default/objects/Product2/fields/ChargeOver_Product_Token__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Product_Token__c</fullName>
    <externalId>true</externalId>
    <label>ChargeOver Product Token</label>
    <length>32</length>
    <type>Text</type>
</CustomField>