force-app/main/default/objects/Product2/fields/Client_Count_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Client_Count_Bucket__c</fullName>
    <label>Client Count Bucket</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>Additional Storage</fullName>
            </value>
            <value>
                <fullName>Amended Return</fullName>
            </value>
            <value>
                <fullName>Articles of Dissolution</fullName>
            </value>
            <value>
                <fullName>Audit Support</fullName>
            </value>
            <value>
                <fullName>Business Tax Prep</fullName>
            </value>
            <value>
                <fullName>Client Books</fullName>
            </value>
            <value>
                <fullName>Company Seal</fullName>
            </value>
            <value>
                <fullName>Corporate Binder</fullName>
            </value>
            <value>
                <fullName>CPA Letter</fullName>
            </value>
            <value>
                <fullName>Dedicated Client Books</fullName>
            </value>
            <value>
                <fullName>Deluxe Recordkeeping Package</fullName>
            </value>
            <value>
                <fullName>EIN Number</fullName>
            </value>
            <value>
                <fullName>Entity Services</fullName>
            </value>
            <value>
                <fullName>Estimated Tax Prep</fullName>
            </value>
            <value>
                <fullName>Expedited Tax Prep Fee</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Full Service Books</fullName>
            </value>
            <value>
                <fullName>Loan Agreement</fullName>
            </value>
            <value>
                <fullName>Merchant Services</fullName>
            </value>
            <value>
                <fullName>Nonprofit Services</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Personal Tax Prep</fullName>
            </value>
            <value>
                <fullName>Registered Agent</fullName>
            </value>
            <value>
                <fullName>Sales and Use Tax</fullName>
            </value>
            <value>
                <fullName>Two-Year Review</fullName>
            </value>
            <value>
                <fullName>1099 Prep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>