force-app/main/default/objects/Product2/fields/Commission_Classification__c.field-meta.xml
<CustomField>
    <fullName>Commission_Classification__c</fullName>
    <label>Commission Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1800Corp</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Tier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>