force-app/main/default/objects/Product2/fields/corp_group__c.field-meta.xml
<CustomField>
    <fullName>corp_group__c</fullName>
    <label>corp_group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Starter</fullName>
            </value>
            <value>
                <fullName>Recommended</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>