force-app/main/default/objects/Product2/fields/Customer_Billing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Billing_Notes__c</fullName>
    <label>Customer Billing Notes</label>
    <type>TextArea</type>
</CustomField>