force-app/main/default/objects/Product2/fields/Disable_QTY_on_Calc__c.field-meta.xml
<CustomField>
    <fullName>Disable_QTY_on_Calc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable QTY on Calc</label>
    <type>Checkbox</type>
</CustomField>