force-app/main/default/objects/Product2/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>ClientBooks</fullName>
            </value>
            <value>
                <fullName>Sprout</fullName>
            </value>
            <value>
                <fullName>Vendasta</fullName>
            </value>
            <value>
                <fullName>EIN Tax Filing</fullName>
            </value>
            <value>
                <fullName>Entity Formation</fullName>
            </value>
            <value>
                <fullName>EIN Partner</fullName>
                <isActive>false</isActive>
                <label>EIN Partner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>