force-app/main/default/objects/Product2/fields/Follow_Up_Billing__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Billing__c</fullName>
    <label>Follow Up Billing</label>
    <type>TextArea</type>
</CustomField>