force-app/main/default/objects/Product2/fields/Fulfillable_Product_for_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Fulfillable_Product_for_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a product is fulfillable and needs a new Active Subscription Line upon a renewal</description>
    <inlineHelpText>If checked, will create a new Active Subscription Line upon renewal of the product</inlineHelpText>
    <label>Fulfillable Product for Renewal</label>
    <type>Checkbox</type>
</CustomField>