force-app/main/default/objects/Product2/fields/Fulfillable_Product_Notification__c.field-meta.xml
<CustomField>
    <fullName>Fulfillable_Product_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is used to send email notifications of the sale of this product to the fulfillment team</description>
    <label>Fulfillable Product Notification</label>
    <type>Checkbox</type>
</CustomField>