force-app/main/default/objects/Product2/fields/HTML_Description__c.field-meta.xml
<CustomField>
    <fullName>HTML_Description__c</fullName>
    <label>HTML Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>