force-app/main/default/objects/Product2/fields/Monthly_Package_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Package_Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monthly Package Fee</label>
    <referenceTo>Bill62__Billing_Schedule__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>