force-app/main/default/objects/Product2/fields/Monthly_Recurring__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Recurring__c</fullName>
    <label>Monthly Recurring</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>