force-app/main/default/objects/Product2/fields/Months_Before_Effective_Price_Increase__c.field-meta.xml
<CustomField>
    <fullName>Months_Before_Effective_Price_Increase__c</fullName>
    <description>The number of months before the scheduled price increase</description>
    <label>Months Before Effective Price Increase</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>