force-app/main/default/objects/Product2/fields/No_Split_Allowed__c.field-meta.xml
<CustomField>
    <fullName>No_Split_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Split Allowed</label>
    <type>Checkbox</type>
</CustomField>