force-app/main/default/objects/Product2/fields/One_Time_Payment__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One-Time Payment</label>
    <type>Checkbox</type>
</CustomField>