force-app/main/default/objects/Product2/fields/Partner_Product__c.field-meta.xml
<CustomField>
    <fullName>Partner_Product__c</fullName>
    <description>Identifies products that are offered to clients by our partners</description>
    <label>Partner Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>LegalZoom</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Sam&apos;s Club</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>