force-app/main/default/objects/Product2/fields/Permissions__c.field-meta.xml
<CustomField>
    <fullName>Permissions__c</fullName>
    <description>Permissions settings accordingly to Payment status of product purchased through Zuora</description>
    <label>Permissions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1099</fullName>
            </value>
            <value>
                <fullName>ALL_BOOKKEEPING</fullName>
            </value>
            <value>
                <fullName>ANNUAL_REPORT</fullName>
            </value>
            <value>
                <fullName>AUDIT_BUSINESS</fullName>
            </value>
            <value>
                <fullName>AUDIT_PERSONAL</fullName>
            </value>
            <value>
                <fullName>BASIC_BOOKKEEPING</fullName>
            </value>
            <value>
                <fullName>DIGITAL_BUSINESS_SOLUTIONS</fullName>
            </value>
            <value>
                <fullName>EIDL</fullName>
            </value>
            <value>
                <fullName>EIN</fullName>
            </value>
            <value>
                <fullName>ENTITY_FORMATION</fullName>
            </value>
            <value>
                <fullName>ENTITY_MANAGEMENT</fullName>
            </value>
            <value>
                <fullName>ESTIMATED_TAXES</fullName>
            </value>
            <value>
                <fullName>EXTENDED_STORAGE</fullName>
            </value>
            <value>
                <fullName>FINANCIAL_PLANNING</fullName>
            </value>
            <value>
                <fullName>FRANCHISE_TAX</fullName>
            </value>
            <value>
                <fullName>PAYROLL</fullName>
            </value>
            <value>
                <fullName>PPP</fullName>
            </value>
            <value>
                <fullName>SALES_AND_USE_TAX</fullName>
            </value>
            <value>
                <fullName>SCHEDULE_C</fullName>
            </value>
            <value>
                <fullName>SCHEDULE_C_2018_QUANTITY</fullName>
            </value>
            <value>
                <fullName>SCHEDULE_C_2019_QUANTITY</fullName>
            </value>
            <value>
                <fullName>SCHEDULE_E</fullName>
            </value>
            <value>
                <fullName>SCHEDULE_E_2017_QUANTITY</fullName>
            </value>
            <value>
                <fullName>SCHEDULE_E_2018_QUANTITY</fullName>
            </value>
            <value>
                <fullName>SCHEDULE_E_2019_QUANTITY</fullName>
            </value>
            <value>
                <fullName>STATE_TAX_FILING</fullName>
            </value>
            <value>
                <fullName>TAX_ADVISORY</fullName>
            </value>
            <value>
                <fullName>TAX_NOTICE</fullName>
            </value>
            <value>
                <fullName>TAXEXTENSION_BUSINESS</fullName>
            </value>
            <value>
                <fullName>TAXEXTENSION_PERSONAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>