force-app/main/default/objects/Product2/fields/Price_Increase_Percent__c.field-meta.xml
<CustomField>
    <fullName>Price_Increase_Percent__c</fullName>
    <description>The percentage that a product&apos;s price should increase upon the 1st year&apos;s renewal</description>
    <inlineHelpText>The percentage that a product&apos;s price should increase upon the 1st year&apos;s renewal</inlineHelpText>
    <label>Price Increase Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>