force-app/main/default/objects/Product2/fields/Product_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Product_Bucket__c</fullName>
    <label>Product Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PA - Portal Access</fullName>
            </value>
            <value>
                <fullName>PAQ - Portal Access Q</fullName>
            </value>
            <value>
                <fullName>CAB - Complete Accounting Both</fullName>
            </value>
            <value>
                <fullName>CAP - Complete Accounting Personal</fullName>
            </value>
            <value>
                <fullName>BK - Bookkeeping</fullName>
            </value>
            <value>
                <fullName>PR - Payroll</fullName>
            </value>
            <value>
                <fullName>R - Renewals</fullName>
            </value>
            <value>
                <fullName>L - Legacy</fullName>
            </value>
            <value>
                <fullName>PS - Portal Storage</fullName>
            </value>
            <value>
                <fullName>AP - Audit Protection</fullName>
            </value>
            <value>
                <fullName>CB - Client Books</fullName>
            </value>
            <value>
                <fullName>RA - Resident Agent</fullName>
            </value>
            <value>
                <fullName>BKA - Bookkeeping Advisory Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>